--- a/tutorial/polls/templates/polls/detail.html
+++ b/tutorial/polls/templates/polls/detail.html
@@ -1,3 +1,15 @@
 <h1>{{ poll.question }}</h1>
 <p>Published date: {{ poll.pub_date }}</p>
 <p>Active: {{ poll.active }}</p>
+{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+
+<form action="{% url 'polls:vote' poll.id %}" method="post">
+{% csrf_token %}
+<ul>
+{% for choice in poll.choice_set.all %}
+    <li><input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
+    <label for="choice{{ forloop.counter }}">{{ choice.choice_text }} ({{ choice.votes}} vote{{ choice.votes|pluralize }}  so far)</label></li>
+{% endfor %}
+</ul>
+<input type="submit" value="Vote Here">
+</form>
