--- a/twitterclone/twitterclone/templates/base.html
+++ b/twitterclone/twitterclone/templates/base.html
@@ -20,12 +20,12 @@
                     <li><a href="/about/">About Me</a></li>
                     <li><a href="/contact/">Contact Me</a></li>
                 </ul>
-                {% if request.user %} <!-- I need help here. How to tell if the user is logged in? -->
-                    <a href="#" class="btn btn-default navbar-btn pull-right">Edit Profile</a></button> | 
-                    <a href="#" class="btn btn-default navbar-btn pull-right">Log Out</a></button>
+                {% if user.is_authenticated %} <!-- I need help here. How to tell if the user is logged in? -->
+                    <a href="{% url 'microblog:edit_profile' user.username %}" class="btn btn-default navbar-btn pull-right">Edit Profile</a></button> | 
+                    <a href="{% url 'auth:logout' %}" class="btn btn-default navbar-btn pull-right">Log Out</a></button>
                 {% else %}
                     <a href="#" class="btn btn-default navbar-btn pull-right">Sign Up</a></button> | 
-                    <a href="#" class="btn btn-default navbar-btn pull-right">Log In</a></button>
+                    <a href="{% url 'auth:login' %}" class="btn btn-default navbar-btn pull-right">Log In</a></button>
                 {% endif %}
             </div>
             
