--- a/twitterclone/twitterclone/templates/base.html
+++ b/twitterclone/twitterclone/templates/base.html
@@ -10,6 +10,7 @@
         <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>
 
         <meta name="viewport" content="width=device-width, initial-scale: 1.0">
+        {% block extrascripts %}{% endblock %}
     </head>
     <body>
         <div class="container">
