--- a/inventoryproject/inventoryproject/templates/base.html
+++ b/inventoryproject/inventoryproject/templates/base.html
@@ -14,6 +14,7 @@
         <style type="text/css">
            body { padding-top: 70px; }
         </style>
+        {% block extrascripts %}{% endblock %}
     </head>
     <body>
         <div class="container">
