Fixed bugs before class starts.

--- a/betterjobboard/jobboard/templates/jobboard/detail.html
+++ b/betterjobboard/jobboard/templates/jobboard/detail.html
@@ -11,7 +11,7 @@
 {% endifequal %}
 
 <div id="post-description">
-{{ post.description|safe }}
+{{ post.description|linebreaks|safe }}
 </div>
 
 <h3>More Details about the job</h3>
