Stopping point on timeclock

--- a/ticktock/timeclock/templates/timeclock/record_list.html
+++ b/ticktock/timeclock/templates/timeclock/record_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Time Sheet for {{ user.username }}{% endlbock %}
+{% block title %}Time Sheet for {{ user.username }}{% endblock %}
 
 {% block content %}
 
@@ -20,12 +20,18 @@
 <tr>
     <td>{{ record.project }}</td>
     <td>{{ record.start_time|date:"Y-m-d g:i a" }}</td>
-    <td>{% if record.end_time %}{{ record.end_time|date:"Y-m-d g:i a" }}{% else %}<span class="label label-warning">in-process</span>{% endif %}</td>
+    <td>{% if record.end_time %}{{ record.end_time|date:"Y-m-d g:i a" }}{% else %}<span class="label label-danger">in-process</span>{% endif %}</td>
     <td>{{ record.elapsed_time }}</td>
-    <td>{{ record.description|truncatewords:8 }}</td>
+    <td>{{ record.message|truncatewords:8 }}</td>
     <td><a href="{% url 'timeclock:record-detail' record.id %}">details</a></td>
 </tr>
 {% endfor %}
 </table>
+
+<div class="actions">
+<h3>Actions</h3>
+<a href="#" class="btn btn-primary">Manage Projects</a>
+<a href="{% url 'timeclock:record-add' %}" class="btn btn-success">Add New Timeclock Entry</a>
+</div>
 
 {% endblock %}
