--- a/pastebin/binpaste/templates/binpaste/new_bin.html
+++ b/pastebin/binpaste/templates/binpaste/new_bin.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>New Iten to Paste</h1>
+<h1>New Item to Paste</h1>
 <form action="." method="POST">
 <table class="table">
 {% csrf_token %}
